Create util class en tests to created objects and make clean code