@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -27,6 +28,8 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Stream;
+
+import com.mercadolibre.be_java_hisp_w23_g2.utils.ObjectCreator;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -48,24 +51,15 @@ class UserServiceTest {
   @DisplayName("T-0001: Verify that the user to follow exists.")
   void followUserTest() {
     // ARRANGE
-    User userFollower = new User();
-    userFollower.setId(2);
-    userFollower.setUserName("Alice Smith");
-    userFollower.setFollowers(List.of());
-    userFollower.setFollowed(List.of());
-
-    User userToFollow = new User();
-    userToFollow.setId(1);
-    userToFollow.setUserName("John Doe");
-    userToFollow.setFollowers(List.of());
+    User userFollower = ObjectCreator.createUser(2, "Alice Smith");
+    User userToFollow = ObjectCreator.createUser(1,"John Doe");
     userToFollow.setFollowed(List.of(userFollower));
 
     when(repository.findUserById(1)).thenReturn(userToFollow);
     when(repository.findUserById(2)).thenReturn(userFollower);
     when(repository.followUser(2, 1)).thenReturn(userToFollow);
 
-    UserFollowedDTO expected = new UserFollowedDTO(1, "John Doe",
-        new ArrayList<>(List.of(new UserBasicDTO(2, "Alice Smith"))));
+    UserFollowedDTO expected = new UserFollowedDTO(1, "John Doe", List.of(new UserBasicDTO(2, "Alice Smith")));
 
     // ACT
     UserFollowedDTO result = service.followUser(2, 1);
@@ -78,36 +72,26 @@ class UserServiceTest {
   @DisplayName("T-0001: Verify that the user to follow exists. Exception.")
   void followUserExceptionTest() {
     // ARRANGE
-    User userFollower = new User();
-    userFollower.setId(2);
-    userFollower.setUserName("Alice Smith");
+    User userFollower = ObjectCreator.createUser(2);
+    Integer userId = userFollower.getId();
 
     when(repository.findUserById(2)).thenReturn(userFollower);
 
     // ACT & ASSERT
-    assertThrows(NotFoundException.class, () -> {
-      service.followUser(2, 1);
-    });
+    assertThrows(NotFoundException.class, () -> service.followUser(userId, 1));
   }
 
   @Test
   @DisplayName("T-0002: Verify that the user to unfollow exists.")
   void unfollowUserTest() {
     // ARRANGE
-    User userToUnfollow = new User();
-    userToUnfollow.setId(2);
-    userToUnfollow.setUserName("Alice Smith");
-    userToUnfollow.setFollowers(List.of());
-    userToUnfollow.setFollowed(List.of());
-
-    User userFollower = new User();
-    userFollower.setId(1);
-    userFollower.setUserName("John Doe");
-    userFollower.setFollowers(List.of());
+    User userToUnfollow = ObjectCreator.createUser(2, "Alice Smith");
+    User userFollower = ObjectCreator.createUser(1, "John Doe");
     userFollower.setFollowed(List.of(userToUnfollow));
 
     when(repository.findUserById(1)).thenReturn(userFollower);
     when(repository.findUserById(2)).thenReturn(userToUnfollow);
+    when(repository.unfollowUser(userFollower,userToUnfollow)).thenReturn(userToUnfollow);
 
     String expected = "Has stopped following Alice Smith";
 
@@ -115,7 +99,6 @@ class UserServiceTest {
     MessageDTO result = service.unfollowUser(1, 2);
 
     // ASSERT
-    assertNotNull(result);
     assertEquals(expected, result.getMessage());
   }
 
@@ -123,95 +106,89 @@ class UserServiceTest {
   @DisplayName("T-0002: Verify that the user to unfollow exists. Exception.")
   void unfollowUserExceptionTest() {
     // ARRANGE
-    User userFollower = new User();
-    userFollower.setId(1);
-    userFollower.setUserName("John Doe");
+    User userFollower = ObjectCreator.createUser(1, "John Doe");
+    Integer userId = userFollower.getId();
 
     when(repository.findUserById(1)).thenReturn(userFollower);
 
     // ACT & ASSERT
-    assertThrows(NotFoundException.class, () -> {
-      service.unfollowUser(1, 2);
-    });
+    assertThrows(NotFoundException.class, () -> service.unfollowUser(userId, 2));
   }
 
   @Test
   @DisplayName("T-0003: Validates that alphabetical order exists (followed).")
   void getFollowedUserTest() {
     //ARRANGE
-    User user_test = new User(1, "melilackington", null, null,
-        List.of(new User(54, "zendaya99", null, null, null),
-            new User(96, "tomHoland87", null, null, null)));
+    User user = ObjectCreator.createUser(1, "John Doe");
+    user.setFollowed(List.of(ObjectCreator.createUser(2, "Alice Smith")));
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT
     UserFollowedDTO obtain = service.getFollowedUser(1, "name_asc");
 
     //ASSERT
-    assertNotEquals(null, obtain);
+    assertNotNull(obtain);
   }
 
   @Test
   @DisplayName("T-0003: Validates that alphabetical order exists (followed). Exception.")
   void getFollowedUserExceptionTest() {
     //ARRANGE
-    User user_test = new User(1, "melilackington", null, null,
-        List.of(new User(54, "zendaya99", null, null, null),
-            new User(96, "tomHoland87", null, null, null)));
+    User user = ObjectCreator.createUser(1, "John Doe");
+    user.setFollowed(List.of(ObjectCreator.createUser(2, "Alice Smith")));
+    Integer userId = user.getId();
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT && ASSERT
-    assertThrows(BadRequestException.class, () -> service.getFollowedUser(1, "cualquier_cosa"));
+    assertThrows(BadRequestException.class, () -> service.getFollowedUser(userId, "cualquier_cosa"));
   }
 
   @Test
   @DisplayName("T-0003: Validates that alphabetical order exists (followers).")
   void getFollowersUserTest() {
     //ARRANGE
-    User user_test = new User(1, "melilackington", null,
-        List.of(new User(54, "zendaya99", null, null, null),
-            new User(96, "tomHoland87", null, null, null)), null);
+    User user = ObjectCreator.createUser(1, "John Doe");
+    user.setFollowers(List.of(ObjectCreator.createUser(3, "Bob Jones")));
+    Integer userId = user.getId();
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT
-    UserFollowersDTO obtain = service.getFollowersUser(1, "name_asc");
+    UserFollowersDTO obtain = service.getFollowersUser(userId, "name_asc");
 
     //ASSERT
-    assertNotEquals(null, obtain);
+    assertNotNull(obtain);
   }
 
   @Test
   @DisplayName("T-0003: Validates that alphabetical order exists (followed). Exception")
   void getFollowersUserExceptionTest() {
     //ARRANGE
-    User user_test = new User(1, "melilackington", null,
-        List.of(new User(54, "zendaya99", null, null, null),
-            new User(96, "tomHoland87", null, null, null)), null);
+    User user = ObjectCreator.createUser(1, "John Doe");
+    user.setFollowers(List.of(ObjectCreator.createUser(2, "Alice Smith")));
+    Integer userId = user.getId();
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT && ASSERT
-    assertThrows(BadRequestException.class, () -> service.getFollowersUser(1, "cualquier_cosa"));
+    assertThrows(BadRequestException.class, () -> service.getFollowersUser(userId, "cualquier_cosa"));
   }
 
   @Test
   @DisplayName("T-0004: Validates that alphabetical order exists on getFollowersUser (asc).")
   void getFollowersUserAscTest() {
     //ARRANGE
-    User user_test = new User(1, "melilackington", null,
-        List.of(new User(54, "zendaya99", null, null, null),
-            new User(96, "tomHoland87", null, null, null)), null);
+    User user = ObjectCreator.createUser(1, "John Doe");
+    user.setFollowers(List.of(ObjectCreator.createUser(3, "Bob Jones"), ObjectCreator.createUser(2, "Alice Smith")));
 
-    UserFollowersDTO expected = new UserFollowersDTO(1, "melilackington",
-        List.of(new UserBasicDTO(96, "tomHoland87"), new UserBasicDTO(54, "zendaya99")));
+    UserFollowersDTO expected = new UserFollowersDTO(1, "John Doe",
+        List.of(new UserBasicDTO(2, "Alice Smith"), new UserBasicDTO(3, "Bob Jones")));
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT
-
     UserFollowersDTO obtain = service.getFollowersUser(1, "name_asc");
 
     //ASSERT
@@ -222,17 +199,14 @@ class UserServiceTest {
   @DisplayName("T-0004: Validates that alphabetical order exists on getFollowersUser (desc).")
   void getFollowersUserDescTest() {
     //ARRANGE
-    User user_test = new User(1, "melilackington", null,
-        List.of(new User(54, "zendaya99", null, null, null),
-            new User(96, "tomHoland87", null, null, null)), null);
+    User user = ObjectCreator.createUser(1, "John Doe");
+    user.setFollowers(List.of(ObjectCreator.createUser(2, "Alice Smith"), ObjectCreator.createUser(3, "Bob Jones")));
 
-    UserFollowersDTO expected = new UserFollowersDTO(1, "melilackington",
-        List.of(new UserBasicDTO(54, "zendaya99"), new UserBasicDTO(96, "tomHoland87")));
+    UserFollowersDTO expected = new UserFollowersDTO(1, "John Doe", List.of(new UserBasicDTO(3, "Bob Jones"), new UserBasicDTO(2, "Alice Smith")));
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT
-
     UserFollowersDTO obtain = service.getFollowersUser(1, "name_desc");
 
     //ASSERT
@@ -243,30 +217,27 @@ class UserServiceTest {
   @DisplayName("T-0004: Validates that alphabetical order exists on getFollowersUser. Exception.")
   void getFollowersUserDescExceptionTest() {
     //ARRANGE
-    List<User> empty_followers = new ArrayList<>();
-    User user_test = new User(1, "melilackington", null, empty_followers, null);
+    User user = ObjectCreator.createUser(1, "John Doe");
+    Integer userId = user.getId();
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT && ASSERT
-    assertThrows(NotFoundException.class, () -> service.getFollowersUser(1, "name_desc"));
+    assertThrows(NotFoundException.class, () -> service.getFollowersUser(userId, "name_desc"));
   }
 
   @Test
   @DisplayName("T-0004: Validates that alphabetical order exists on getFollowedUser (asc).")
   void getFollowedUserAscTest() {
     //ARRANGE
-    User user_test = new User(1, "melilackington", null, null,
-        List.of(new User(54, "zendaya99", null, null, null),
-            new User(96, "tomHoland87", null, null, null)));
+    User user = ObjectCreator.createUser(1, "John Doe");
+    user.setFollowed(List.of(ObjectCreator.createUser(3, "Bob Jones"), ObjectCreator.createUser(2, "Alice Smith")));
 
-    UserFollowedDTO expected = new UserFollowedDTO(1, "melilackington",
-        List.of(new UserBasicDTO(96, "tomHoland87"), new UserBasicDTO(54, "zendaya99")));
+    UserFollowedDTO expected = new UserFollowedDTO(1, "John Doe", List.of(new UserBasicDTO(2, "Alice Smith"), new UserBasicDTO(3, "Bob Jones")));
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT
-
     UserFollowedDTO obtain = service.getFollowedUser(1, "name_asc");
 
     //ASSERT
@@ -277,17 +248,14 @@ class UserServiceTest {
   @DisplayName("T-0004: Validates that alphabetical order exists on getFollowedUser (desc).")
   void getFollowedUserDescTest() {
     //ARRANGE
-    User user_test = new User(1, "melilackington", null, null,
-        List.of(new User(54, "zendaya99", null, null, null),
-            new User(96, "tomHoland87", null, null, null)));
+    User user = ObjectCreator.createUser(1, "John Doe");
+    user.setFollowed(List.of(ObjectCreator.createUser(2, "Alice Smith"), ObjectCreator.createUser(3, "Bob Jones")));
 
-    UserFollowedDTO expected = new UserFollowedDTO(1, "melilackington",
-        List.of(new UserBasicDTO(54, "zendaya99"), new UserBasicDTO(96, "tomHoland87")));
+    UserFollowedDTO expected = new UserFollowedDTO(1, "John Doe", List.of(new UserBasicDTO(3, "Bob Jones"), new UserBasicDTO(2, "Alice Smith")));
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT
-
     UserFollowedDTO obtain = service.getFollowedUser(1, "name_desc");
 
     //ASSERT
@@ -298,41 +266,30 @@ class UserServiceTest {
   @DisplayName("T-0004: Validates that alphabetical order exists on getFollowedUser. Exception.")
   void getFollowedUserDescExceptionTest() {
     //ARRANGE
-    List<User> empty_followed = new ArrayList<>();
-    User user_test = new User(1, "melilackington", null, null, empty_followed);
+    User user = ObjectCreator.createUser(1, "John Doe");
+    Integer userId = user.getId();
 
-    when(repository.findUserById(1)).thenReturn(user_test);
+    when(repository.findUserById(1)).thenReturn(user);
 
     //ACT && ASSERT
-    assertThrows(NotFoundException.class, () -> service.getFollowedUser(1, "name_desc"));
+    assertThrows(NotFoundException.class, () -> service.getFollowedUser(userId, "name_desc"));
   }
 
   @Test
   @DisplayName("T-0005: Test method to verify that the type of ascending sort by date exists.")
   void verifyTypeAscSortingExistsTest() {
     // Arrange
-    User user = new User();
-    User follower1 = new User();
-    user.setId(1);
-    follower1.setId(2);
+    User user = ObjectCreator.createUser(1);
+    User follower = ObjectCreator.createUser(2);
+    user.setFollowed(List.of(follower));
 
-    Post post21 = new Post(1, 2, LocalDate.now().minusWeeks(1), new Product(), null, 0.0);
-    Post post22 = new Post(2, 2, LocalDate.now().minusDays(5), new Product(), null, 0.0);
+    Post post21 = ObjectCreator.createPost(1, 2, LocalDate.now().minusWeeks(1));
+    Post post22 = ObjectCreator.createPost(2, 2, LocalDate.now().minusWeeks(5));
 
-    follower1.setPosts(new ArrayList<>(Arrays.asList(post21, post22)));
-
-    user.setFollowed(List.of(follower1));
-
-    ObjectMapper mapper = new ObjectMapper();
-    List<PostBasicDTO> postDTOS = new ArrayList<>(
-        Stream.of(post21, post22).map(post -> mapper.convertValue(post, PostBasicDTO.class))
-            .toList());
-    postDTOS.sort(Comparator.comparing(PostBasicDTO::getDate));
-
-    PostsFollowedDTO followedDTO = new PostsFollowedDTO(user.getId(), postDTOS);
+    follower.setPosts(List.of(post21, post22));
 
     when(repository.findUserById(1)).thenReturn(user);
-    when(repository.findUserById(2)).thenReturn(follower1);
+    when(repository.findUserById(2)).thenReturn(follower);
 
     // Act
     PostsFollowedDTO result = service.getPostsByFollowedUsers(user.getId(), "date_asc");
@@ -345,28 +302,18 @@ class UserServiceTest {
   @DisplayName("T-0005: Test method to verify that the type of descending sort by date exists.")
   void verifyTypeDescSortingExistsTest() {
     // Arrange
-    User user = new User();
-    User follower1 = new User();
-    user.setId(1);
-    follower1.setId(2);
+    User user = ObjectCreator.createUser(1);
+    User follower = ObjectCreator.createUser(2);
+    user.setFollowers(List.of(follower));
 
-    Post post21 = new Post(1, 2, LocalDate.now().minusWeeks(1), new Product(), null, 0.0);
-    Post post22 = new Post(2, 2, LocalDate.now().minusDays(5), new Product(), null, 0.0);
+    Post post21 = ObjectCreator.createPost(1, 2, LocalDate.now().minusWeeks(1));
+    Post post22 = ObjectCreator.createPost(2, 2, LocalDate.now().minusWeeks(5));
 
-    follower1.setPosts(new ArrayList<>(Arrays.asList(post21, post22)));
-
-    user.setFollowed(List.of(follower1));
-
-    ObjectMapper mapper = new ObjectMapper();
-    List<PostBasicDTO> postDTOS = new ArrayList<>(
-        Stream.of(post21, post22).map(post -> mapper.convertValue(post, PostBasicDTO.class))
-            .toList());
-    postDTOS.sort(Comparator.comparing(PostBasicDTO::getDate).reversed());
-
-    PostsFollowedDTO followedDTO = new PostsFollowedDTO(user.getId(), postDTOS);
+    follower.setPosts(List.of(post21, post22));
+    user.setFollowed(List.of(follower));
 
     when(repository.findUserById(1)).thenReturn(user);
-    when(repository.findUserById(2)).thenReturn(follower1);
+    when(repository.findUserById(2)).thenReturn(follower);
 
     // Act
     PostsFollowedDTO result = service.getPostsByFollowedUsers(user.getId(), "date_desc");
@@ -379,44 +326,31 @@ class UserServiceTest {
   @DisplayName("T-0005: Test method to verify that the type of sort by date. Exception.")
   void verifyTypeSortingExistsExceptionTest() {
     // Arrange
-    User user = new User();
-    User follower1 = new User();
-    Integer id = 1;
-    user.setId(id);
-    follower1.setId(2);
+    User user = ObjectCreator.createUser(1);
+    User follower = ObjectCreator.createUser(2);
+    user.setFollowers(List.of(follower));
 
-    Post post21 = new Post(1, 2, LocalDate.now().minusWeeks(1), new Product(), null, 0.0);
-    Post post22 = new Post(2, 2, LocalDate.now().minusDays(5), new Product(), null, 0.0);
+    Post post21 = ObjectCreator.createPost(1, 2, LocalDate.now().minusWeeks(1));
+    Post post22 = ObjectCreator.createPost(2, 2, LocalDate.now().minusWeeks(5));
 
-    follower1.setPosts(new ArrayList<>(Arrays.asList(post21, post22)));
-
-    user.setFollowed(List.of(follower1));
-
-    ObjectMapper mapper = new ObjectMapper();
-    List<PostBasicDTO> postDTOS = new ArrayList<>(
-        Stream.of(post21, post22).map(post -> mapper.convertValue(post, PostBasicDTO.class))
-            .toList());
-    postDTOS.sort(Comparator.comparing(PostBasicDTO::getDate).reversed());
-
-    PostsFollowedDTO followedDTO = new PostsFollowedDTO(user.getId(), postDTOS);
+    follower.setPosts(List.of(post21, post22));
+    user.setFollowed(List.of(follower));
 
     when(repository.findUserById(1)).thenReturn(user);
-    when(repository.findUserById(2)).thenReturn(follower1);
+    when(repository.findUserById(2)).thenReturn(follower);
 
     // Act & Assert
-    assertThrows(BadRequestException.class, () -> service.getPostsByFollowedUsers(id, "fake"));
+    assertThrows(BadRequestException.class, () -> service.getPostsByFollowedUsers(1, "fake"));
   }
 
   @Test
   @DisplayName("T-0006: Test method to verify correct ascending order by date.")
   void verifyAscSortingByDateTest() {
     // Arrange
-    User user = new User();
-    User follower1 = new User();
-    User follower2 = new User();
-    user.setId(1);
-    follower1.setId(2);
-    follower2.setId(3);
+    User user = ObjectCreator.createUser(1);
+    User follower1 = ObjectCreator.createUser(2);
+    User follower2 = ObjectCreator.createUser(3);
+    user.setFollowed(List.of(follower1, follower2));
 
     Post post21 = new Post(1, 2, LocalDate.now().minusWeeks(1), new Product(), null, 0.0);
     Post post22 = new Post(2, 2, LocalDate.now().minusDays(5), new Product(), null, 0.0);
@@ -429,8 +363,6 @@ class UserServiceTest {
 
     follower1.setPosts(new ArrayList<>(Arrays.asList(post21, post22, post23, post24)));
     follower2.setPosts(new ArrayList<>(Arrays.asList(post31, post32, post33)));
-
-    user.setFollowed(List.of(follower1, follower2));
 
     ObjectMapper mapper = new ObjectMapper();
     List<PostBasicDTO> postDTOS = new ArrayList<>(
@@ -455,12 +387,10 @@ class UserServiceTest {
   @DisplayName("T-0006: Test method to verify correct descending order by date.")
   void verifyDescSortingByDateTest() {
     // Arrange
-    User user = new User();
-    User follower1 = new User();
-    User follower2 = new User();
-    user.setId(1);
-    follower1.setId(2);
-    follower2.setId(3);
+    User user = ObjectCreator.createUser(1);
+    User follower1 = ObjectCreator.createUser(2);
+    User follower2 = ObjectCreator.createUser(3);
+    user.setFollowed(List.of(follower1, follower2));
 
     Post post21 = new Post(1, 2, LocalDate.now().minusWeeks(1), new Product(), null, 0.0);
     Post post22 = new Post(2, 2, LocalDate.now().minusDays(5), new Product(), null, 0.0);
@@ -471,10 +401,8 @@ class UserServiceTest {
     Post post32 = new Post(2, 3, LocalDate.now().minusDays(13), new Product(), null, 0.0);
     Post post33 = new Post(3, 3, LocalDate.now().minusDays(10), new Product(), null, 0.0);
 
-    follower1.setPosts(new ArrayList<>(Arrays.asList(post21, post22, post23, post24)));
-    follower2.setPosts(new ArrayList<>(Arrays.asList(post31, post32, post33)));
-
-    user.setFollowed(List.of(follower1, follower2));
+    follower1.setPosts(List.of(post21, post22, post23, post24));
+    follower2.setPosts(List.of(post31, post32, post33));
 
     ObjectMapper mapper = new ObjectMapper();
     List<PostBasicDTO> postDTOS = new ArrayList<>(
@@ -499,19 +427,11 @@ class UserServiceTest {
   @Test
   void getFollowersCountSellerTest() {
     //Arrange
-    User user = new User();
-    user.setId(1);
-    user.setUserName("John Doe");
-
-    User follower1 = new User();
-    User follower2 = new User();
-
-    follower1.setId(2);
-    follower1.setUserName("Alice Smith");
-    follower2.setId(3);
-    follower2.setUserName("Bob Jones");
-
+    User user = ObjectCreator.createUser(1);
+    User follower1 = ObjectCreator.createUser(2);
+    User follower2 = ObjectCreator.createUser(3);
     user.setFollowers(List.of(follower1, follower2));
+
     when(repository.findUserById(user.getId())).thenReturn(user);
 
     // Act
@@ -525,12 +445,10 @@ class UserServiceTest {
   @DisplayName("T-0008: Test method to obtain posts with the last two weeks old.")
   void getPostsWithLastTwoWeeksOld() {
     //Arrange
-    User user = new User();
-    User follower1 = new User();
-    User follower2 = new User();
-    user.setId(1);
-    follower1.setId(2);
-    follower2.setId(3);
+    User user = ObjectCreator.createUser(1);
+    User follower1 = ObjectCreator.createUser(2);
+    User follower2 = ObjectCreator.createUser(3);
+    user.setFollowed(List.of(follower1, follower2));
 
     Post postRecent1 = new Post(1, 2, LocalDate.now().minusWeeks(1), new Product(), null, 0.0);
     Post postRecent2 = new Post(2, 2, LocalDate.now().minusDays(5), new Product(), null, 0.0);
@@ -543,8 +461,6 @@ class UserServiceTest {
 
     follower1.setPosts(List.of(postRecent1, postRecent2, postRecent3, postOld1));
     follower2.setPosts(List.of(postRecent4, postOld2, postRecent5));
-
-    user.setFollowed(List.of(follower1, follower2));
 
     PostsFollowedDTO followedDTO = Mapper.mapPostFollowedDTO(1,
         List.of(postRecent1, postRecent2, postRecent3, postRecent4, postRecent5));
